--- a/.github/workflows/Push.yml
+++ b/.github/workflows/Push.yml
@@ -11,13 +11,13 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
-        node-version: [ 16.x ]
+        node-version: [ 20.x, 21.x ]
     if: "!startsWith( github.event.head_commit.message, 'version' ) && !startsWith( github.ref, 'refs/tags/v' )"
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install
